--- a/Sharing 1/portofolio.html
+++ b/Sharing 1/portofolio.html
@@ -1,57 +1,57 @@
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>Portofolio</title>
-</head>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="styles.css" />
+        <title>Portofolio</title>
+    </head>
 
-<body>
-    <main>
-        <h1>My Profile</h1>
-        <hr>
+    <body>
         <header>
-            <div>
-                <center>
-                    <a href="">Home</a>
-                    <a href="">Profile</a>
-                    <a href="">Contact</a>
-                </center>
-            </div>
+            <h1>My Profile</h1>
+            <nav>
+                <a href="">Home</a>
+                <a href="">Profile</a>
+                <a href="">Contact</a>
+            </nav>
         </header>
-        <div>
-            <h2 style="border-bottom: 4px solid blue;">About Me</h2>
-            <img src="assets/example.jpg" alt="" class="hero">
-            <p id="intro">Perkenalkan nama saya Muhammad Syukur Abadi, biasa saya dipanggil <span>syukur</span> . Saya
-                tinggal di Batam, dan saat ini
-                berkuliah di UM jurusan Teknik Elektro, program studi Teknik Informatika, angkatan 2019
-            </p>
-            <br>
-            <p>Di Malang, saya tinggal di Lowokwaru</p>
-        </div>
-
-        <hr>
-        <div>
-            <h2 style="border-bottom: 4px solid red;">Education</h2>
-            <ul>
-                <li class="education">SDN 005 Batam Kota</li>
-                <li class="education">SMPN 10 Batam</li>
-                <li class="education">SMAN 3 Batam</li>
-                <li class="education">Universitas Negeri Malang</li>
-            </ul>
-        </div>
-
-        <hr>
+        <main>
+            <section id="about-me">
+                <h2>About Me</h2>
+                <div class="content">
+                    <img src="assets/example.jpg" alt="" class="hero" />
+                    <p id="intro">
+                        Perkenalkan nama saya Muhammad Syukur Abadi, biasa saya dipanggil
+                        <span>syukur</span> . Saya tinggal di Batam, dan saat ini berkuliah di
+                        UM jurusan Teknik Elektro, program studi Teknik Informatika, angkatan
+                        2019 <span>Di Malang, saya tinggal di Lowokwaru</span>
+                    </p>
+                </div>
+            </section>
+            <section id="education">
+                <h2>Education</h2>
+                <div class="content">
+                    <ul>
+                        <li class="education">SDN 005 Batam Kota</li>
+                        <li class="education">SMPN 10 Batam</li>
+                        <li class="education">SMAN 3 Batam</li>
+                        <li class="education">Universitas Negeri Malang</li>
+                    </ul>
+                </div>
+            </section>
+        </main>
         <footer>
-            <h2>Contact</h2>
-            <center>
-                <a href="https://sipejar.um.ac.id/">SIPEJAR</a>
-                <a href="#">Medium</a>
-            </center>
+            <div>
+                <ul>
+                    <li><a href="https://sipejar.um.ac.id/">Sipejar</a></li>
+                    <li><a href="#">Medium</a></li>
+                    <li><a href="#">Github</a></li>
+                    <li><a href="#">Linkedin</a></li>
+                </ul>
+            </div>
         </footer>
-    </main>
-</body>
+    </body>
 
 </html>
